--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
     "@heroicons/react": "2.0.12",
     "@material-tailwind/react": "1.2.4",
     "apexcharts": "3.35.5",
+    "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
+    "react-big-calendar": "^1.6.9",
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "6.4.2"
+    "react-router-dom": "6.4.2",
+    "react-select": "^5.7.3",
+    "sweetalert2": "^11.7.2",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@types/react": "18.0.17",
