--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react-apexcharts": "1.4.0",
     "react-big-calendar": "^1.6.9",
     "react-data-table-component": "^7.5.3",
+    "react-datepicker": "^4.12.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "6.4.2",
     "react-select": "^5.7.3",
     "sweetalert2": "^11.7.2",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "^4.0.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "18.0.17",
